# ecom-brand-model-service

./: Cargo.toml  README.md  env.example
migrations/2024-09-01-120000_create_brand/: up.sql
migrations/2024-09-01-130000_create_brand_model/: down.sql  up.sql
src/: error_handler.rs  main.rs
src/handlers/: brand.rs  brand_model.rs  mod.rs
src/models/: brand.rs  brand_model.rs  mod.rs  schema.rs
src/repository/: database.rs
