[package]
name = "ecom-data-loader-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-lite = "2.3.0"
lazy_static = "1.5.0"
listenfd = "1.0.1"
log = "0.4.22"
r2d2 = "0.8.10"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version =  "7.1.0", features = ["actix-web"] }
uuid = {version = "1.10.0", features = ["v4","v5","serde"] }
